syntax = "proto3";

package ecommerce;

import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";
import "domain.proto";

message Order {
    string userID = 1 [(akkaserverless.field).entity_key = true];
    string orderID = 2;
    string orderTotal = 3;
    string customerStatus = 4;
    repeated OrderItem items = 5;
}

message OrderItem {
    string productID = 1;
    int32 quantity = 2;
    float price = 3;
}

service OrderBackendService {
    rpc AddOrder(Order) returns (Order) {
        option (google.api.http) = {
            post: "/order/{orderID}",
            body: "*"
        };
    }
}